[metadata]
name = elabackup
version = 0.1.0
author = Martin Larralde
author-email = martin.larralde@ens-paris-saclay.fr
home-page = https://github.com/althonos/elabackup
description = Quick and dirty CLI app to backup an eLabFTW instance using the HTTP API.
license = MIT
license-file = COPYING
platform = any
keywords = bioinformatics, elab, elabftw, lims, script, backup
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Science/Research
  Intended Audience :: System Administrators
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 2.6
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.3
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Topic :: Scientific/Engineering :: Bio-Informatics
project_urls =
  eLabFTW Documentation = https://doc.elabftw.net/

[options]
zip_safe = true
packages = find:
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
test_suite = tests
setup_requires =
  setuptools >=30.3
install_requires =
  docopt ~=0.6.2
  six ~=1.10
  tqdm ~=4.24

[options.entry_points]
console_scripts =
  elabackup = elabackup:App.main

[bdist_wheel]
universal = 1

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats  = zip

[coverage:report]
show_missing = true
exclude_lines =
  pragma: no cover
  if typing.TYPE_CHECKING:
  @abc.abstractmethod
  @abc.abstractproperty
  raise NotImplementedError
  return NotImplemented

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions

[flake8]
max-line-length = 99
doctests = True
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/
ignore = D200, D203, D213, D406, D407   # Google conventions
